--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Subham's Portfolio</h1>
     <h2>I am a Web Developer</h2>
+    <h2>I want to become a good developer also</h2>
     <hr/>
     <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
     <img src="./assets/images/birthday-invite.png" alt="Preview of the Birthday Invite Project" height="200"/>
